fix: fix index.html buttons jumping on pressing
Remove outline in active state

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -547,7 +547,11 @@ img.img-third-width {
 }
 
 /* end backtotop button section */
-
+a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
+        padding-bottom: 6px;
+        outline: none;
+    }
 a.check-out {
     padding: 8px 18px;
     margin-top: 10px;
@@ -566,7 +570,6 @@ a.check-out {
 }
 
 a.check-out:hover {
-    outline: none;
     padding-bottom: 6px;
     background: hsla(190, 79%, 27%, 1);
     background: -webkit-gradient(linear, left top, right top, color-stop(20%, var(--CheckGradColor2)), to(var(--CheckGradColor1)));
@@ -597,7 +600,6 @@ a.resume {
 }
 
 a.resume:hover {
-    outline: none;
     padding-bottom: 6px;
     background: hsla(0, 0%, 7%, 1);
     background: -webkit-gradient(linear, left top, right top, color-stop(30%, var(--ResumeGradColor2)), to(var(--ResumeGradColor1)));
@@ -1514,8 +1516,8 @@ input[type="tel"] {
         width: 99%;
         text-align: center;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1533,8 +1535,8 @@ input[type="tel"] {
         width: 49%;
         text-align: center;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1564,8 +1566,8 @@ input[type="tel"] {
     .about-buttons-small-screen {
         display: none;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1579,8 +1581,8 @@ input[type="tel"] {
     .is-hidden {
         display: none;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1682,8 +1684,8 @@ input[type="tel"] {
         max-width: 100%;
         min-width: 100%;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1705,8 +1707,8 @@ input[type="tel"] {
         color: #529fcc;
         text-decoration: none;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1730,8 +1732,8 @@ input[type="tel"] {
     .is-hidden {
         display: none;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -1962,8 +1964,8 @@ input[type="tel"] {
         grid-template-columns: 1fr;
         grid-gap: 10px;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -2008,8 +2010,8 @@ input[type="tel"] {
     .is-hidden {
         display: none;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
@@ -2157,8 +2159,8 @@ input[type="tel"] {
     img.img-third-width {
         width: 32%;
     }
-    a.check-out:hover,
-    a.resume:hover {
+    a.check-out:hover, a.check-out:active,
+    a.resume:hover, a.resume:active {
         padding-bottom: 6px;
         outline: none;
     }
